@@ -55,34 +55,34 @@ AM_GLIB_GNU_GETTEXT
   
 if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps", [Pixmaps directory])
-   pixmapsdir="${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
+   pixmaps_dir="${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
 else
    AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps", [Pixmaps directory])
-   pixmapsdir="${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
+   pixmaps_dir="${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
 fi
 
-AC_SUBST(pixmapsdir)
+AC_SUBST(pixmaps_dir)
 			
 	   
 if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(UI_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui", [Path where glade files will be installed])
-   uidir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui"
+   ui_dir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui"
 else
    AC_DEFINE_UNQUOTED(UI_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/ui", [Path where glade files will be installed])
-   uidir="${prefix}/${DATADIRNAME}/${PACKAGE}/ui"
+   ui_dir="${prefix}/${DATADIRNAME}/${PACKAGE}/ui"
 fi
 
-AC_SUBST(uidir)
+AC_SUBST(ui_dir)
 			
 if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(COMICS_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics", [Path where data files will be installed])
-   comicsdir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics"
+   comics_dir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics"
 else
    AC_DEFINE_UNQUOTED(COMICS_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/comics", [Path where data files will be installed])
-   comicsdir="${prefix}/${DATADIRNAME}/${PACKAGE}/comics"
+   comics_dir="${prefix}/${DATADIRNAME}/${PACKAGE}/comics"
 fi
 
-AC_SUBST(comicsdir)
+AC_SUBST(comics_dir)
 
 
 	   
